exports[`test should render a ProgressBar component with default heightSize 50% fill and custom props and style 1`] = `
<progress
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={50}
  className="progress-bar small"
  dir="rtl"
  max={100}
  style={
    Object {
      "color": undefined,
    }
  }
  tabIndex="-1"
  value={50} />
`;

exports[`test should render a ProgressBar component with large heightSize and 60% fill 1`] = `
<progress
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={60}
  className="progress-bar large"
  color="#8ccc62"
  max={100}
  style={
    Object {
      "color": "#8ccc62",
    }
  }
  tabIndex="-1"
  value={60} />
`;

exports[`test should render a ProgressBar component with tiny heightSize and 15% fill 1`] = `
<progress
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={15}
  className="progress-bar tiny"
  max={100}
  style={
    Object {
      "color": undefined,
    }
  }
  tabIndex="-1"
  value={15} />
`;

exports[`test should render a default component 1`] = `
<progress
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={0}
  className="progress-bar small"
  max={100}
  style={
    Object {
      "color": undefined,
    }
  }
  tabIndex="-1"
  value={0} />
`;
